add staging files for L02 and L03

--- a/lectures/L01/index.qmd
+++ b/lectures/L01/index.qmd
@@ -9,7 +9,7 @@ format:
     output-file: slides.html
 ---
 
-::: {.content-visible when-format="html"}
+::: {.content-visible when-format="html" unless-format="revealjs"}
 
 ::: {.callout-note}
 Slides 👉  [Open presentation🗒️](./slides.html)
