--- a/lectures/L02/index.qmd
+++ b/lectures/L02/index.qmd
@@ -9,7 +9,7 @@ format:
     output-file: slides.html
 ---
 
-::: {.content-visible when-format="html"}
+::: {.content-visible when-format="html" unless-format="revealjs"}
 
 ::: {.callout-note}
 Slides 👉  [Open presentation🗒️](./slides.html)
@@ -42,13 +42,13 @@ $$
 
 After today's lecture, you will be able to:
 
-- Distinguish diffusion vs convection mechanisms
-- Recall common cases in defining the $N_A$ and $N_B$ relation
-- Apply constraints to select the right case
-- Solve:
+- **Distinguish** diffusion vs convection mechanisms
+- **Recall** common cases in defining the $N_A$ and $N_B$ relation
+- **Apply** constraints to select the right case
+- **Solve**:
   - Equimolar counter diffusion (EMCD)
   - Diffusion through stagnant B
-- Analyze different solutions for EMCD and stagnant B
+- **Analyze** different solutions for EMCD and stagnant B
 
 
 --- 
@@ -103,149 +103,17 @@ $$
 
 ## Typical $D_{AB}$ Range
 
-```python {.marimo}
-D_AB_plot
+```{=html}
+<iframe width="100%" height="800"
+		src="./diffusivity_demo.html" title="Webpage example"></iframe>
 ```
-
-```python {.marimo hide_code="true"}
-import marimo as mo
-```
-
-```python {.marimo hide_code="true"}
-import numpy as np
-import plotly.graph_objects as go
-
-# Constants
-_R_gas_constant: float = 8.314  # J/(mol·K)
-_ref_temp: float = 298.15  # K (25 °C)
-
-# Reference diffusivities at _ref_temp (m^2/s)
-_D_gas_ref: float = 1e-5
-_D_liquid_ref: float = 5e-10
-_D_solid_ref: float = 1e-14
-
-# Temperature dependency parameters
-# For gases: D ~ T^exponent
-_gas_exponent: float = 1.75
-# For liquids/solids: Arrhenius-like D ~ exp(-Ea/RT)
-_Ea_liquid: float = 15_000  # J/mol (typical for diffusion in water)
-_Ea_solid: float = 50_000  # J/mol (typical for diffusion in solids)
-
-# Temperature slider
-
-
-def calculate_diffusivity_gas(temp: float) -> float:
-    """Calculate gas diffusivity based on temperature."""
-    return _D_gas_ref * (temp / _ref_temp)**_gas_exponent
-
-def calculate_diffusivity_liquid(temp: float) -> float:
-    """Calculate liquid diffusivity based on temperature."""
-    return _D_liquid_ref * np.exp(
-        (_Ea_liquid / _R_gas_constant) * (1 / _ref_temp - 1 / temp)
-    )
-
-def calculate_diffusivity_solid(temp: float) -> float:
-    """Calculate solid diffusivity based on temperature."""
-    return _D_solid_ref * np.exp(
-        (_Ea_solid / _R_gas_constant) * (1 / _ref_temp - 1 / temp)
-    )
-
-# Calculate diffusivities at the current slider temperature
-# _D_gas_current: float = calculate_diffusivity_gas(current_temp.value)
-# _D_liquid_current: float = calculate_diffusivity_liquid(current_temp.value)
-# _D_solid_current: float = calculate_diffusivity_solid(current_temp.value)
-
-# Display current values
-# _display_values = mo.md(
-#     f"""
-#     ### Diffusivity at {current_temp.value:.2f} K
-#     ({current_temp.value - 273.15:.2f} °C)
-#     - **Gas:** `{_D_gas_current:.2e}` m²/s
-#     - **Liquid:** `{_D_liquid_current:.2e}` m²/s
-#     - **Solid:** `{_D_solid_current:.2e}` m²/s
-#     """
-# )
-
-# Generate data for plotting over the temperature range
-_temps_for_plot: np.ndarray = np.linspace(273.15, 373.15, 100)
-_D_gas_plot: np.ndarray = np.array(
-    [calculate_diffusivity_gas(t) for t in _temps_for_plot]
-)
-_D_liquid_plot: np.ndarray = np.array(
-    [calculate_diffusivity_liquid(t) for t in _temps_for_plot]
-)
-_D_solid_plot: np.ndarray = np.array(
-    [calculate_diffusivity_solid(t) for t in _temps_for_plot]
-)
-
-# Create Plotly figure
-_fig = go.Figure()
-
-_fig.add_trace(go.Scatter(
-    x=_temps_for_plot,
-    y=_D_gas_plot,
-    mode='lines',
-    name='Gas',
-    line=dict(color='blue'),
-    hovertemplate=(
-        'Temperature: %{x:.2f} K<br>'
-        'Diffusivity: %{y:.2e} m²/s<extra>Gas</extra>'
-    )
-))
-_fig.add_trace(go.Scatter(
-    x=_temps_for_plot,
-    y=_D_liquid_plot,
-    mode='lines',
-    name='Liquid',
-    line=dict(color='red'),
-    hovertemplate=(
-        'Temperature: %{x:.2f} K<br>'
-        'Diffusivity: %{y:.2e} m²/s<extra>Liquid</extra>'
-    )
-))
-_fig.add_trace(go.Scatter(
-    x=_temps_for_plot,
-    y=_D_solid_plot,
-    mode='lines',
-    name='Solid',
-    line=dict(color='green'),
-    hovertemplate=(
-        'Temperature: %{x:.2f} K<br>'
-        'Diffusivity: %{y:.2e} m²/s<extra>Solid</extra>'
-    )
-))
-
-_fig.update_layout(
-    title="Diffusivity vs. Temperature for Different Phases",
-    xaxis_title="Temperature (K)",
-    yaxis_title="Diffusivity (m²/s)",
-    yaxis_type="log",  # Use log scale for y-axis due to large range
-    hovermode="x unified",
-    legend_title="Phase",
-    width=1200,
-    template="plotly_white",
-    font=dict(
-        size=26  
-    ),
-)
-D_AB_plot = _fig
-```
-
 
 
 ## A Common Misconception
 
 Search for any youtube video with *"diffusion experiment dye"*
 
-<iframe
-  width="1280"
-  height="600"
-  src="https://www.youtube.com/embed/STLAJH7_zkY"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen>
-</iframe>
+[Example Video](https://www.youtube.com/embed/STLAJH7_zkY){preview-link="true"}
 
 Can we **verify** whether the scenario seen is Ficknian diffusion?
 
@@ -268,40 +136,12 @@ Length $L$ traveled in time $t$:
 ::: {.column width="55%"}
 Assuming $D_{AB} = 10^{-10} \mathrm{m^2/s}$
 $v_{m} = 10^{-3} \mathrm{m/s}$
-```python {.marimo}
-# Convert slider exponents to physical values
-def plot(log10_D, log10_vm):
-    D_AB = 10 ** (log10_D)     # m^2/s
-    v_m  = 10 ** (log10_vm)    # m/s
 
-    # Time horizon (seconds)
-    t_end = 120.0
-    t = np.linspace(0, t_end, 200)
+```{=html}
+<iframe width="100%"
+		src="./diffusion_length.html" title="Webpage example"></iframe>
 
-    # Length scales
-    L_diff = 6.0 * np.sqrt(D_AB * t)   # m
-    L_conv = v_m * t                   # m
-
-    fig = go.Figure()
-    fig.add_trace(go.Scatter(x=t, y=L_diff, mode="lines", name="Diffusion: $6\\sqrt{D_{AB}t}$"))
-    fig.add_trace(go.Scatter(x=t, y=L_conv, mode="lines", name="Convection: $v_m t$"))
-
-    fig.update_layout(
-        title=f"Length Scale vs Time (0–{t_end:.0f} s)",
-        xaxis_title="Time, t (s)",
-        yaxis_title="Length, L (m)",
-        yaxis_type="log",
-        hovermode="x unified",
-        height=680,
-        template="plotly_white",
-        font=dict(size=26),
-        legend=dict(font=dict(size=22)),
-    )
-    return fig
-
-plot(log10_D=-10, log10_vm=-3)
 ```
-
 :::
 
 ::::
@@ -386,11 +226,6 @@ Equimolar Counter Diffusion (EMCD)
 - $N_A + N_B = 0$
 - $v_m = 0$
 
-<!-- **Implication** -->
-
-<!-- - Transport is purely diffusive -->
-<!-- - Fluxes are equal and opposite -->
-
 **Example**
 
 - Two gases exchanging through a thin tube
@@ -405,11 +240,6 @@ Diffusion with Stagnant B
 - $N_B = 0$
 - $N_A \neq 0$
 
-<!-- **Implication** -->
-
-<!-- - Bulk motion exists -->
-<!-- - Convection cancels diffusion of B -->
-
 **Example**
 
 - Evaporation of A through non-diffusing air
@@ -422,12 +252,7 @@ General Case
 **Assumption**
 
 - $N_A \neq 0$
-- $N_A = x N_B$ & $x \neq -1$
-
-<!-- **Implication** -->
-
-<!-- - Both diffusion and convection contribute -->
-<!-- - Requires coupled flux relations -->
+- $N_A = k N_B$ ($k \neq -1$)
 
 **Example**
 
@@ -504,45 +329,45 @@ From EMCD, $N_A$ is constant and $c_A(z)$ is linear!
 <!-- \end{align*} -->
 <!-- ``` -->
 
-```python {.marimo}
-import matplotlib.pyplot as plt
+<!-- ```python {.marimo} -->
+<!-- import matplotlib.pyplot as plt -->
 
-def plot_ca():
-    # Abstract coordinate (we'll label endpoints as z1 and z2)
-    z = np.linspace(0, 1, 200)
+<!-- def plot_ca(): -->
+<!--     # Abstract coordinate (we'll label endpoints as z1 and z2) -->
+<!--     z = np.linspace(0, 1, 200) -->
 
-    # Total concentration (constant)
-    cT = 1.0  # arbitrary units
+<!--     # Total concentration (constant) -->
+<!--     cT = 1.0  # arbitrary units -->
 
-    # EMCD-style linear profiles
-    cA_z1 = 0.80 * cT
-    cA_z2 = 0.10 * cT
-    cA = cA_z1 + (cA_z2 - cA_z1) * z
-    cB = cT - cA
-    cT_profile = cT * np.ones_like(z)
+<!--     # EMCD-style linear profiles -->
+<!--     cA_z1 = 0.80 * cT -->
+<!--     cA_z2 = 0.10 * cT -->
+<!--     cA = cA_z1 + (cA_z2 - cA_z1) * z -->
+<!--     cB = cT - cA -->
+<!--     cT_profile = cT * np.ones_like(z) -->
 
-    fig, ax = plt.subplots(figsize=(7.5, 4.5), dpi=150)
+<!--     fig, ax = plt.subplots(figsize=(7.5, 4.5), dpi=150) -->
 
-    ax.plot(z, cA, label=r"$c_A(z)$")   # default color cycle
-    ax.plot(z, cB, label=r"$c_B(z)$")
-    ax.plot(z, cT_profile, label=r"$c_T$")
+<!--     ax.plot(z, cA, label=r"$c_A(z)$")   # default color cycle -->
+<!--     ax.plot(z, cB, label=r"$c_B(z)$") -->
+<!--     ax.plot(z, cT_profile, label=r"$c_T$") -->
 
-    ax.set_xlabel(r"Position, $z$")
-    ax.set_ylabel(r"$c / c_{T}$")
+<!--     ax.set_xlabel(r"Position, $z$") -->
+<!--     ax.set_ylabel(r"$c / c_{T}$") -->
 
-    ax.set_xlim(0, 1)
-    ax.set_xticks([0, 1])
-    ax.set_xticklabels([r"$z_1$", r"$z_2$"])
+<!--     ax.set_xlim(0, 1) -->
+<!--     ax.set_xticks([0, 1]) -->
+<!--     ax.set_xticklabels([r"$z_1$", r"$z_2$"]) -->
 
-    ax.set_ylim(0, 1.05 * cT)
+<!--     ax.set_ylim(0, 1.05 * cT) -->
 
-    ax.grid(True, alpha=0.3)
-    ax.legend(loc="best", frameon=False)
+<!--     ax.grid(True, alpha=0.3) -->
+<!--     ax.legend(loc="best", frameon=False) -->
 
-    return ax
+<!--     return ax -->
 
-plot_ca()
-```
+<!-- plot_ca() -->
+<!-- ``` -->
 
 
 
@@ -560,8 +385,8 @@ The governing equation becomes:
 
 ```{=tex}
 \begin{align}
-  N_A &= -cD_{AB}\dfrac{d x_A}{dz} + x_A N_A \\
-  N_A(1 - x_A) &= -cD_{AB}\dfrac{d x_A}{dz}
+  N_A &= -c_TD_{AB}\dfrac{d x_A}{dz} + x_A N_A \\
+  N_A(1 - x_A) &= -c_TD_{AB}\dfrac{d x_A}{dz}
 \end{align}
 ```
 
@@ -641,8 +466,8 @@ We get
 ```{=tex}
 \begin{align}
 
-N_A = \frac{p_TD_{AB}}{RT(z_2-z_1)}
-  \frac{1}{p_{Bm}}(p_{A1}-p_{A2})
+N_A = \frac{D_{AB}}{RT(z_2-z_1)}
+  \frac{p_T}{p_{Bm}}(p_{A1}-p_{A2})
 
 \end{align}
 ```
