--- a/lectures/L01/index.qmd
+++ b/lectures/L01/index.qmd
@@ -81,7 +81,7 @@ After today's lecture, you will be able to:
   - In person
   - Scheduled **Apr 15, 2026 · 8:30 a.m.**
 
-_Details please see the [course syllabus (UofA login)](https://canvas.ualberta.ca/courses/31008/files/6950659?module_item_id=3529042)_
+_Details please see the [course syllabus](../../syllabus/assets/CHE318-winter-2026-course-syllabus.pdf)_
 
 ## Textbook
 
