--- a/lectures/L02/index.qmd
+++ b/lectures/L02/index.qmd
@@ -105,7 +105,7 @@ $$
 
 ```{=html}
 <iframe width="100%" height="800"
-		src="./diffusivity_demo.html" title="Webpage example"></iframe>
+		src="../../../scripts/L02_diffusivity_demo.html" title="Webpage example"></iframe>
 ```
 
 
@@ -139,8 +139,7 @@ $v_{m} = 10^{-3} \mathrm{m/s}$
 
 ```{=html}
 <iframe width="100%"
-		src="./diffusion_length.html" title="Webpage example"></iframe>
-
+		src="../../../scripts/L02_diffusion_length.html" title="Webpage example"></iframe>
 ```
 :::
 
