--- a/lectures/L02/index.qmd
+++ b/lectures/L02/index.qmd
@@ -105,7 +105,7 @@ $$
 
 ```{=html}
 <iframe width="100%" height="800"
-		src="../../../scripts/L02_diffusivity_demo.html" title="Webpage example"></iframe>
+		src="../../scripts/L02_diffusivity_demo.html" title="Webpage example"></iframe>
 ```
 
 
@@ -138,8 +138,8 @@ Assuming $D_{AB} = 10^{-10} \mathrm{m^2/s}$
 $v_{m} = 10^{-3} \mathrm{m/s}$
 
 ```{=html}
-<iframe width="100%"
-		src="../../../scripts/L02_diffusion_length.html" title="Webpage example"></iframe>
+<iframe width="100%" height="800"
+		src="../../scripts/L02_diffusion_length.html" title="Webpage example"></iframe>
 ```
 :::
 
