--- a/lectures/L03/index.qmd
+++ b/lectures/L03/index.qmd
@@ -12,7 +12,8 @@ format:
 ::: {.content-visible when-format="html" unless-format="revealjs"}
 
 ::: {.callout-note}
-Slides 👉  [Open presentation🗒️](./slides.html)
+- Slides 👉  [Open presentation🗒️](./slides.html)
+- Handwritten notes 👉 [Open in pdf](./public/L03_annotated.pdf)
 :::
 
 :::
